[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/entrega_Asombro.gd" type="Script" id=1]
[ext_resource path="res://characters/little_chef.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/player_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/kitchen.tscn" type="PackedScene" id=4]

[node name="entrega_Asombro" type="Node2D"]
script = ExtResource( 1 )

[node name="kitchen" parent="." instance=ExtResource( 4 )]

[node name="little_chef" parent="." instance=ExtResource( 2 )]
position = Vector2( 720, 0 )

[node name="player_camera" parent="." instance=ExtResource( 3 )]
position = Vector2( 816, 0 )

[connection signal="player_entered" from="kitchen/portal_to_dinning_room" to="." method="_on_portal_to_dinning_room_player_entered"]
[connection signal="player_entered" from="kitchen/portal_to_backdoors" to="." method="_on_portal_to_backdoors_player_entered"]
[connection signal="dialog" from="kitchen/big_chef" to="." method="_on_big_chef_dialog"]
[connection signal="body_entered" from="kitchen/cooking_pot" to="." method="_on_cooking_pot_player_entered"]

[editable path="kitchen"]
